--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,28 @@
       <h1>RapidNPV</h1>
 
       <div ng-controller="NpvCtrl">
-        
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Discount Rate %</th>
+              <th>Cash Flow Year 0</th>
+              <th>Cash Flow Year 1</th>
+              <th>Cash Flow Year 2</th>
+              <th>Cash Flow Year 3</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><input class="form-control" ng-model="npv.rate"></td>
+              <td><input class="form-control" ng-model="npv.cf0"></td>
+              <td><input class="form-control" ng-model="npv.cf1"></td>
+              <td><input class="form-control" ng-model="npv.cf2"></td>
+              <td><input class="form-control" ng-model="npv.cf3"></td>
+            </tr>
+          </tbody>
+        </table>  
+        <button class="btn btn-primary" ng-click="calculateNPV()">Submit</button>
       </div> <!-- NpvCtrl -->
     </div>
   </body>
