--- a/public/index.html
+++ b/public/index.html
@@ -4,37 +4,42 @@
     <meta charset="utf-8" />
     <title>RapidNPV</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link href='http://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/style.css">
     <script src="js/angular/angular.js"></script>
     <script src="features/controllers/npvController.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   </head>
   <body>
     <div class='container'>
-      <h1>RapidNPV</h1>
+      <h1 class="logo">RapidNPV</h1>
+      <p>Please fill out the information below</p>
 
       <div ng-controller="NpvCtrl">
         <table class="table">
           <thead>
             <tr>
               <th>Discount Rate %</th>
-              <th>Cash Flow Year 0</th>
               <th>Cash Flow Year 1</th>
               <th>Cash Flow Year 2</th>
               <th>Cash Flow Year 3</th>
+              <th>Cash Flow Year 4</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td><input class="form-control" ng-model="npv.rate"></td>
-              <td><input class="form-control" ng-model="npv.cf0"></td>
+              <td><input placeholder="e.g, 10 for 10%" class="form-control" ng-model="npv.rate"></td>
+              <td><input placeholder="Always negative" class="form-control" ng-model="npv.cf0"></td>
               <td><input class="form-control" ng-model="npv.cf1"></td>
               <td><input class="form-control" ng-model="npv.cf2"></td>
               <td><input class="form-control" ng-model="npv.cf3"></td>
             </tr> 
           </tbody>
         </table>  
-        <button class="btn btn-primary" ng-click="calculateNPV()">Submit</button>
+        <button class="btn btn-primary" ng-click="calculateNPV()">Is it worth it?</button>
       </div> <!-- NpvCtrl -->
       <div id="results"></div>
+      <div id="status"></div>
     </div>
   </body>
 </html>
