Fixed bug with  package.json

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app=''>
+<html ng-app='RapidNPV'>
   <head>
     <meta charset="utf-8" />
     <title>RapidNPV</title>
@@ -37,7 +37,8 @@
             </tr> 
           </tbody>
         </table>  
-        <button class="btn btn-primary" ng-click="calculateNPV()">Is it worth it?</button>
+        <button type="submit" class="btn btn-primary submit" ng-click="calculateNPV()">Is it worth it?</button>
+      </form>
       </div> <!-- NpvCtrl -->
       <div id="results"></div>
       <div id="status"></div>
