--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app=''>
+<html>
   <head>
     <meta charset="utf-8" />
     <title>RapidNPV</title>
@@ -11,7 +11,7 @@
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   </head>
   <body>
-    <div class='container'>
+    <div class='container' ng-app='RapidNPV'>
       <h1 class="logo">RapidNPV</h1>
       <p>Please fill out the information below</p>
 
@@ -21,10 +21,10 @@
           <thead>
             <tr>
               <th>Discount Rate %</th>
+              <th>Cash Flow Year 0</th>
               <th>Cash Flow Year 1</th>
               <th>Cash Flow Year 2</th>
               <th>Cash Flow Year 3</th>
-              <th>Cash Flow Year 4</th>
             </tr>
           </thead>
           <tbody>
@@ -32,12 +32,12 @@
               <td><input placeholder="e.g, 10 for 10%" class="form-control" ng-model="npv.rate" required></td>
               <td><input placeholder="Always negative" class="form-control" ng-model="npv.cf0" required></td>
               <td><input class="form-control" ng-model="npv.cf1" required></td>
-              <td><input class="form-control" ng-model="npv.cf2"></td>
-              <td><input class="form-control" ng-model="npv.cf3"></td>
+              <td><input class="form-control" ng-model="npv.cf2" required></td>
+              <td><input class="form-control" ng-model="npv.cf3" required></td>
             </tr> 
           </tbody>
         </table>  
-        <button type="submit" class="btn btn-primary submit" ng-click="calculateNPV()">Is it worth it?</button>
+        <button type="submit" class="btn btn-primary submit" ng-click="calculateNPV()" ng-disabled="npvForm.$invalid">Is it worth it?</button>
       </form>
       </div> <!-- NpvCtrl -->
       <div id="results"></div>
