--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
           <tbody>
             <tr>
               <td><input placeholder="e.g, 10 for 10%" class="form-control" ng-model="npv.rate" required></td>
-              <td><input placeholder="Always negative" class="form-control" ng-model="npv.cf0" required></td>
+              <td><input placeholder="always negative" class="form-control" ng-model="npv.cf0" required></td>
               <td><input class="form-control" ng-model="npv.cf1" required></td>
               <td><input class="form-control" ng-model="npv.cf2" required></td>
               <td><input class="form-control" ng-model="npv.cf3" required></td>
